ags gtk4 dashboard too wide fix

--- a/config/ags-gtk4/style/dashboard.scss
+++ b/config/ags-gtk4/style/dashboard.scss
@@ -82,7 +82,7 @@
 		background-color: $hover;
 	}
 
-	padding: 0.5rem 0.75rem;
+	padding: 0.5rem;
 	margin: 0.2rem;
 }
 
